@@ -1,3 +1,7 @@
+2007-12-12	Frank Richter	<frank.richter@gmail.com>
+
+* Mouse wheel events support.
+
 2007-12-11	Frank Richter	<frank.richter@gmail.com>
 
 * Resize support.
